# python-masterthermlocal

./: .devcontainer-template.json  .gitignore  .ruff.toml  LICENSE  pyproject.toml  requirements.txt
masterthermconnect/: __init__.py  __main__.py  api.py  const.py  controller.py  exceptions.py  modbus.py  modbusmap.py
masterthermlocal/: __version__.py
tests/: test_main.py
